@@ -1,3 +1,9 @@
+2015-06-24  James Anderson  <anderson@gfz-potsdam.de>
+
+	* src/vex2difx.cpp:
+	* src/corrparams.cpp:
+	* src/corrparams.h: bugfixes for RadioAstron compilation
+
 2015-05-15  James Anderson  <anderson@gfz-potsdam.de>
 
 	* src/vextables.h:
